--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,6 +65,11 @@ p, label, a, input[type=submit] {
     margin: 40px 0px;
 }
 
+.commentblock:nth-child(even) {
+    background-color: #CFCFA4;
+    padding: 5px;
+}
+
 .signalcontainer {
     position: relative;
     display: flex;
@@ -208,6 +213,12 @@ input[type=submit] {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 5px;
+}
+
+.commententry {
+    max-width: calc(100% - 100px);
+    word-wrap: break-word;
 }
 
 /* BLOG LIST */
