--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,9 +8,18 @@ body, body * {
 }
 
 header {
-    display: flex;
     height: 50px;
+}
+
+header .content {
+    height: 100%;
+    display: flex;
     align-items: center;
+    justify-content: space-between;
+}
+
+header img {
+    height: 40px;
 }
 
 header a {
@@ -36,11 +45,16 @@ strong {
     min-height: 200px;
 }
 
-#content {
+.content {
     width: 1180px;
     margin: auto;
     max-width: 100%;
     padding: 20px 10px;
+}
+
+h1 {
+    color: white;
+    text-shadow: #000000 1px 1px, #000000 -1px 1px, #000000 -1px -1px, #000000 1px -1px;
 }
 
 h1, h2, h3 {
@@ -54,6 +68,27 @@ h3 {
 
 p, label, a, input[type=submit] {
     font-family: 'Raleway', sans-serif;
+}
+
+hr {
+    width: 70%;
+    max-width: 200px;
+    margin: 40px auto;
+    background-color: #277A82;
+    height: 5px;
+}
+
+#general_intro {
+    margin: auto;
+    text-align: center;
+    max-width: 800px;
+}
+
+#general_intro img {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    border: 2px solid dimgrey;
 }
 
 #contentaction {
@@ -80,7 +115,7 @@ p, label, a, input[type=submit] {
     background-color: rgb(232, 58, 55);
     text-decoration: none;
     font-size: 1em;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     border-width: 0px;
     position: absolute;
     width: 100%;
@@ -130,7 +165,7 @@ p, label, a, input[type=submit] {
     background-color: rgb(232, 58, 55);
     text-decoration: none;
     font-size: 1em;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     border-width: 0px;
     position: absolute;
     width: 100%;
@@ -143,7 +178,7 @@ p, label, a, input[type=submit] {
     background-color: rgb(232, 58, 55);
     text-decoration: none;
     font-size: 1em;
-    font-family: Raleway;
+    font-family: 'Raleway', sans-serif;
     border-width: 0px;
     position: absolute;
     cursor: pointer;
